objects/ProductOfInterest__c.object
<CustomObject>
    <fields>
        <fullName>AC_Ownerid__c</fullName>
        <formula>CASESAFEID( ActivityContact__r.OwnerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AC Ownerid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityContactId__c</fullName>
        <label>ActivityContactId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Contact</label>
        <referenceTo>ActivityContact__c</referenceTo>
        <relationshipLabel>Products of Interest</relationshipLabel>
        <relationshipName>Products_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivityId__c</fullName>
        <externalId>true</externalId>
        <label>ActivityId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityProductId__c</fullName>
        <externalId>true</externalId>
        <label>ActivityProductId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <formula>HYPERLINK('/'&amp; ActivityId__c , 'Activity')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <formula>Product__r.AffiliateLU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetClass__c</fullName>
        <formula>TEXT( Product__r.AssetSubClass__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirmBranch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm/Branch</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products of Interest</relationshipLabel>
        <relationshipName>Products_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundFamily__c</fullName>
        <formula>TEXT( Product__r.Family )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fund Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>Product__r.Name &amp; ';'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <formula>TEXT( Product__r.ProductType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products of Interest</relationshipLabel>
        <relationshipName>Products_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelationId__c</fullName>
        <externalId>true</externalId>
        <label>Relation Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep/Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products of Interest</relationshipLabel>
        <relationshipName>Products_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT( Product__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubjectURL__c</fullName>
        <formula>HYPERLINK('/'&amp; ActivityId__c , Subject__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Product of Interest</label>
    <nameField>
        <displayFormat>PI-{0000000000}</displayFormat>
        <label>Products of Interest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products of Interest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>FirmBranch__c</columns>
        <columns>RepContact__c</columns>
        <columns>Product__c</columns>
        <columns>Activity__c</columns>
        <columns>ActivityId__c</columns>
        <columns>ActivityContactId__c</columns>
        <columns>ActivityProductId__c</columns>
        <columns>Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>my_POI</fullName>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>RepContact__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>SubjectURL__c</columns>
        <filterScope>Mine</filterScope>
        <label>my POI</label>
    </listViews>
</CustomObject>